--- a/src/creator.html
+++ b/src/creator.html
@@ -7,6 +7,7 @@
 
 	<!-- YOUR PREREQUISITES -->
 	<script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.10/angular.min.js"></script>
+	<script src='//cdnjs.cloudflare.com/ajax/libs/angular.js/1.2.16/angular-sanitize.min.js'></script>
 
 	<!-- REQUIRED MATERIA JS -->
 	<script type="text/javascript" src="materia.creatorcore.js"></script>
