Updated to use modern MDK.

--- a/src/creator.html
+++ b/src/creator.html
@@ -10,9 +10,7 @@
 	<script src='//cdnjs.cloudflare.com/ajax/libs/angular.js/1.2.16/angular-sanitize.min.js'></script>
 
 	<!-- REQUIRED MATERIA JS -->
-	<script type="text/javascript" src="materia.creatorcore.js"></script>
-	<script type="text/javascript" src="materia.storage.manager.js"></script>
-	<script type="text/javascript" src="materia.storage.table.js"></script>
+	<script src="materia.creatorcore.js"></script>
 
 	<!-- MAIN APP -->
 	<script src="modules/creator.js"></script>
