--- a/src/creator.html
+++ b/src/creator.html
@@ -1,43 +1,42 @@
 <!DOCTYPE html>
-<html ng-app="materiaCreator">
-<head>
-	<meta charset="utf-8" />
-	<title>Template Widget</title>
-	<link rel="stylesheet" href="creator.css">
+<html>
+	<head>
+		<title>Template Widget Creator</title>
+		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 
-	<!-- YOUR PREREQUISITES -->
-	<script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.10/angular.min.js"></script>
-	<script src='//cdnjs.cloudflare.com/ajax/libs/angular.js/1.2.16/angular-sanitize.min.js'></script>
+		<!-- STYLESHEETS -->
+		<link rel="stylesheet" type="text/css" href="creator.css">
 
-	<!-- REQUIRED MATERIA JS -->
-	<script src="materia.creatorcore.js"></script>
+		<!-- REQUIRED MATERIA JAVASCRIPT -->
+		<script src="materia.creatorcore.js"></script>
 
-	<!-- MAIN APP -->
-	<script src="modules/creator.js"></script>
-	<script src="controllers/creator.js"></script>
-</head>
-<body ng-controller="creatorCtrl">
+		<!-- YOUR PREREQUISITES -->
+		<script src="//cdnjs.cloudflare.com/ajax/libs/angular.js/1.6.9/angular.min.js"></script>
 
-	<header>
-		{{widget.engineName}}
-	</header>
+		<!-- MAIN CREATOR APP -->
+		<script src="creator.js"></script>
+	</head>
 
-	<div class="container">
-		<h1>How to create your widget:</h1>
-		<ol>
-			<li>
-				<p>
-					First, give your widget a name:
-				</p>
-				<input type="text" ng-model="widget.title" placeholder="Widget name..." />
-			</li>
+	<body ng-app="creator" ng-controller="creatorCtrl">
+		<header>
+			{{widget.engineName}}
+		</header>
+		<div class="container">
+			<h1>How to create your widget:</h1>
+			<ol>
+				<li>
+					<p>
+						First, give your widget a name:
+					</p>
+					<input type="text" ng-model="widget.title" placeholder="Widget name..." />
+				</li>
 
-			<li>
-				<p>
-					Then, click <b ng-if="!state.isEditingExistingWidget">Publish</b><b ng-if="state.isEditingExistingWidget">Update</b> at the top of the page.
-				</p>
-			</li>
-		</ol>
-	</div>
-</body>
+				<li>
+					<p>
+						Then, click <b ng-if="!state.isEditingExistingWidget">Publish</b><b ng-if="state.isEditingExistingWidget">Update</b> at the top of the page.
+					</p>
+				</li>
+			</ol>
+		</div>
+	</body>
 </html>
