changes tests to using jest

--- a/src/creator.html
+++ b/src/creator.html
@@ -17,7 +17,7 @@
 		<script src="creator.js"></script>
 	</head>
 
-	<body ng-app="creator" ng-controller="creatorCtrl">
+	<body ng-app="creator" ng-controller="CreatorCtrl">
 		<header>
 			{{widget.engineName}}
 		</header>
