adds use of score logs, score import, and end game, fixes copy path

--- a/src/player.html
+++ b/src/player.html
@@ -43,8 +43,8 @@
 					</li>
 				</ul>
 			</div>
-			<div id="modalContainer" ng-if="result">
-				<h2>{{result}}</h2>
+			<div id="modalContainer" ng-if="displayFinish">
+				<button ng-click="submitFinal()">Finish</button>
 			</div>
 		</div>
 	</body>
